--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -4,6 +4,18 @@
   font-family: 'Barlow';
 }
 
+*::-webkit-scrollbar {
+  width: 6px;
+}
+
+*::-webkit-scrollbar-thumb {
+  background-color: #1cb2b7;
+  border-radius: 10px;
+}
+
+*::-webkit-scrollbar-track {
+  background: transparent;
+}
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
